--- a/AC_Policy/component.yaml
+++ b/AC_Policy/component.yaml
@@ -304,3 +304,11 @@ verifications:
   name: Policy Document
   path: https://github.com/18F/compliance-docs/blob/master/AC-Policy.md
   type: URL
+- description: "GIVEN the github link - <policy> THEN the policy has been updated\
+    \ within the last 180 days \n"
+  key: Policy_Update_Test
+  last_run: 2016-04-07 13:25:17.375257
+  name: 18F Policies Update
+  path: BDD/policies.feature
+  test_passed: false
+  type: TEST
