--- a/CP_Policy/component.yaml
+++ b/CP_Policy/component.yaml
@@ -12,3 +12,12 @@ satisfies:
   standard_key: NIST-800-53
 schema_version: 2.0
 system: 18F
+verifications:
+- description: "GIVEN the github link - <policy> THEN the policy has been updated\
+    \ within the last 180 days \n"
+  key: Policy_Update_Test
+  last_run: 2016-04-07 13:25:17.622244
+  name: 18F Policies Update
+  path: BDD/policies.feature
+  test_passed: false
+  type: TEST
