--- a/SC_Policy/component.yaml
+++ b/SC_Policy/component.yaml
@@ -37,3 +37,11 @@ verifications:
   name: policy document
   path: https://github.com/18f/compliance-docs/blob/master/SC-policy.md
   type: url
+- description: "GIVEN the github link - <policy> THEN the policy has been updated\
+    \ within the last 180 days \n"
+  key: Policy_Update_Test
+  last_run: 2016-04-07 13:25:17.749496
+  name: 18F Policies Update
+  path: BDD/policies.feature
+  test_passed: false
+  type: TEST
