--- a/IR_Policy/component.yaml
+++ b/IR_Policy/component.yaml
@@ -1,22 +1,24 @@
+---
 documentation_complete: false
-name: Incident Response for 18F
+name: Incident Response for cloud.gov
 satisfies:
 - control_key: IR-1
   covered_by: []
   implementation_status: none
-  narrative: 18F Policy
+  narrative:
+  - text:
   standard_key: NIST-800-53
-schema_version: 2.0
+schema_version: v3.0.0
 system: 18F
 verifications:
 - key: POLICY_DOC
   name: Policy Document
   path: https://github.com/18F/compliance-docs/blob/master/IR-Policy.md
   type: URL
-- description: "GIVEN the github link - <policy> THEN the policy has been updated\
-    \ within the last 180 days \n"
+- description: |
+    GIVEN the github link - <policy> THEN the policy has been updated within the last 180 days
   key: Policy_Update_Test
-  last_run: 2016-04-07 13:25:17.644608
+  last_run: 2016-04-07 08:25:17.644608000 -05:00
   name: 18F Policies Update
   path: BDD/policies.feature
   test_passed: false
