Document encryption and stub SA-11.

--- a/SA_Policy/component.yaml
+++ b/SA_Policy/component.yaml
@@ -138,7 +138,8 @@ satisfies:
     text: |-
       Configuration and deployment of the cloud.gov platform is managed using the
       BOSH project. BOSH releases and deployment manifests are stored in GitHub;
-      sensitive credentials are stored in Amazon S3.
+      sensitive credentials are stored in Amazon S3 and are protected using both
+      client- and server-side encryption.
   - key: b
     text: |-
       Changes to BOSH configuration are tracked in GitHub. Documentation is stored
@@ -165,6 +166,13 @@ satisfies:
   - text: |-
       Deployment artifacts are stored and distributed by BOSH along with SHA-1 hashes
       to allow verification of file integrity.
+  standard_key: NIST-800-53
+- control_key: SA-11
+  covered_by:
+  - verification_key: DEPLOYMENT_TESTING
+  narrative:
+  - text: |-
+      TODO
   standard_key: NIST-800-53
 - control_key: SA-11 (1)
   covered_by:
