--- a/SA_Policy/component.yaml
+++ b/SA_Policy/component.yaml
@@ -78,8 +78,28 @@ satisfies:
   - verification_key: POLICY_DOC
   implementation_status: none
   narrative:
-  - text: |-
-      TODO
+  - key: a
+    text: |-
+      Documentation for cloud.gov is maintained within the GitHub repositories for
+      the various components that comprise the system and at https://docs.cloud.gov.
+      Administrator documentation describe secure deployment and operation of cloud.gov.
+  - key: b
+    text: |-
+      Best practices for secure usage of cloud.gov are available and continuously
+      updated at https://docs.cloud.gov.
+  - key: c
+    text: |-
+      Reports of uncomplete or unavailable documentation are filed using GitHub
+      issues attached to https://github.com/18F/cg-docs or to the repositories that
+      store various cloud.gov components.
+  - key: d
+    text: |-
+      Because cloud.gov documentation does not contain sensitive information,
+      documentation is publically accessible in GitHub and at https://docs.cloud.gov.
+  - key: e
+    text: |-
+      Documentation for cloud.gov is maintained within the GitHub repositories for
+      the various components that comprise the system and at https://docs.cloud.gov.
   standard_key: NIST-800-53
 - control_key: SA-8
   covered_by:
