--- a/SA_Policy/component.yaml
+++ b/SA_Policy/component.yaml
@@ -9,7 +9,7 @@ satisfies:
   narrative:
   - key: a
     text: |-
-      18F documents responsibiliies of various teams and individuals in our Handbook, which is sent to all new employees on their first day. The Equipment section lays out the procedure for purchasing new software. The system that we use for these requests, C2 (https://cap.18f.gov) is responsible for routing to the correct individuals for approval and purchasing.
+      18F documents responsibilities of various teams and individuals in our Handbook, which is sent to all new employees on their first day. The Equipment section lays out the procedure for purchasing new software. The system that we use for these requests, C2 (https://cap.18f.gov) is responsible for routing to the correct individuals for approval and purchasing.
   - key: b
     text: |-
       The Handbook page and the code for C2 are both in GitHub, so any change in policy/procedure is done by making a change in those places. Their existence in GitHub mean all changes are reviewed and version-controlled.
