Upgrade schema for AU-1

--- a/AU_Policy/component.yaml
+++ b/AU_Policy/component.yaml
@@ -1,6 +1,25 @@
 documentation_complete: false
 name: Audit and Accountability Policy for 18F
 satisfies:
+- control_key: AU-1
+  covered_by:
+  - verification_key: POLICY_DOC
+  implementation_status: complete
+  narrative:
+    - key: a
+      text: |
+         The 18F Program Office develops, documents, and disseminates to all 18F staff,
+         The 18F Audit and Accountability Policy which  addresses purpose, scope, roles,
+         responsibilities, management commitment, coordination among organizational entities,
+         compliance and procedures to facilitate the implementation of the audit and
+         accountability policy and associated audit controls. The 18F Audit and Accountability
+         policy is listed within 18F's private Github repository and the docs.cloud.gov site
+         that is accessible to all 18F staff.
+    - key: b
+      text: |
+         The 18F Program Office will review and update the current 18F Audit control policy
+         at least every 3 years and any documented audit procedures at least annually.
+  standard_key: NIST-800-53
 - control_key: AU-2
   covered_by:
   - verification_key: POLICY_DOC
